--- a/express/express-demo/views/index.ejs
+++ b/express/express-demo/views/index.ejs
@@ -2,8 +2,14 @@
 <html>
   <head>
     <title>Homepage</title>
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <%- include('navbar', {links: links}) %>
+    <ul>
+      <% users.forEach((user) => { %>
+        <%- include('users/user', {user: user}); %>
+      <% }); %>
+    </ul>
   </body>
 </html>
