--- a/express/forms-and-data-handling/views/partials/errors.ejs
+++ b/express/forms-and-data-handling/views/partials/errors.ejs
@@ -1,9 +1,11 @@
 <!-- views/partials/errors.ejs -->
 <% if (locals.errors) {%>
-    <ul>
+  <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-4 max-w-md mx-auto" role="alert">
+    <ul class="list-disc pl-5">
       <% errors.forEach(function(error) { %>
-        <li><%= error.msg %></li>
+        <li class="text-sm"><%= error.msg %></li>
       <% }); %>
     </ul>
-  <% } %>
+  </div>
+<% } %>
   
