--- a/football-players-inventory/views/categories/show.ejs
+++ b/football-players-inventory/views/categories/show.ejs
@@ -1,4 +1,4 @@
-<%- include('../layouts/main') %>
+<%- include('../layouts/header') %>
 <div class="max-w-4xl mx-auto bg-white p-6 rounded shadow">
   <h2 class="text-2xl font-bold mb-4"><%= category.name %></h2>
   <p class="text-gray-600 mb-4"><%= category.description %></p>
@@ -29,3 +29,4 @@
   </div>
   <a href="/categories" class="mt-4 inline-block text-blue-600 hover:underline">Back to Categories</a>
 </div>
+<%- include('../layouts/footer') %>
