--- a/football-players-inventory/views/test.ejs
+++ b/football-players-inventory/views/test.ejs
@@ -1,3 +1,4 @@
-<% layout('layouts/main') %>
+<%- include('layouts/header') %>
 <h1>Test Page</h1>
 <p>This is a test to verify the layout functionality.</p>
+<%- include('layouts/footer') %>
